오늘자 1차 커밋

--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -145,7 +145,7 @@
                             </li>
 
                             <li class="box_w">
-                                <img src="assets/icon_knowhow.png" alt="">
+                                <div class="icon_knowhow"></div>
                                 <div class="txt_w">
                                     <p><span class="count" data-count-to="17">0</span></p>
                                     <em>yrs of Knowhow</em>
@@ -153,7 +153,7 @@
                             </li>
 
                             <li class="box_b">
-                                <img src="assets/icon_salesmarket.png" alt="">
+                                <div class="icon-sales"></div>
                                 <div class="txt_b">
                                     <p><span class="count" data-count-to="200" data-suffix="+">0</span></p>
                                     <em>Sales Markets</em>
