--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -10,12 +10,12 @@
   <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/common_moon.css">
   <link rel="stylesheet" href="./css/main_media.css">
   <link rel="stylesheet" href="./moon/css/pg-style.css">
   <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
-  <script src="./js/common.js"></script>
+  <script src="./js/common_moon.js"></script>
   <script defer src="./moon/js/pg.js"></script>
   <title>Viewer’s Playground Page</title>
 </head>
@@ -95,10 +95,10 @@
         <div class="inner">
           <ul data-asap="fade-up" data-asap-duration="400" data-asap-easing="ease-in-out" data-asap-mirror="true"
             data-asap-delay="300" data-asap-once="false" data-asap-anchor-placement="top-center">
-            <li>Create,</li>
-            <li>Share,</li>
-            <li>Vote,</li>
-            <li>Play with K-drama</li>
+            <li class="hero-text1">Create,</li>
+            <li class="hero-text2">Share,</li>
+            <li class="hero-text3">Vote,</li>
+            <li class="hero-text4">Play with K-drama</li>
           </ul>
           <div class="imgbox" data-asap="fade-up" data-asap-duration="400" data-asap-delay="600"
             data-asap-easing="ease-in-out" data-asap-mirror="true" data-asap-once="false"
