--- a/IR.html
+++ b/IR.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/common_moon.css">
     <link rel="stylesheet" href="css/main_media.css">
     <link rel="stylesheet" href="IR_Kwon/css/main_style.css">
     <link rel="stylesheet" href="IR_Kwon/css/main_media.css">
@@ -20,20 +20,20 @@
     <!-- GSAP 라이브러리 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/common_moon.js"></script>
     <script src="IR_Kwon/js/main.js"></script>
 </head>
 
 <body>
     <div class="wrap">
+        <div class="header_bg">
+        </div>
         <header class="">
-            <div class="header_bg">
-            </div>
             <div class="inner">
-                <h1><a href="#" class="logo"><img src="asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
-                <nav>
+                <h1><a href="/main_beck.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="#">ABOUT</a>
+                        <li class=""><a href="/companyintroduction_kim.html">ABOUT</a>
                             <ul class="sub">
                                 <li><a href="#">About Us</a></li>
                                 <li><a href="#">Business Ethics</a></li>
@@ -43,10 +43,10 @@
                                 <li><a href="#">Contact & Location</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">WORKS</a>
+                        <li><a href="/Listworks_lee.html">WORKS</a>
                             <ul class="sub">
                                 <li><a href="#">Production List</a></li>
-                                <li><a href="#">Viewer Participation</a></li>
+                                <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
                         <li><a href="#">NEWSROOM</a>
@@ -55,7 +55,7 @@
                                 <li><a href="#">News</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">IR</a>
+                        <li><a href="/IR.html">IR</a>
                             <ul class="sub">
                                 <li><a href="#">IR Insights</a></li>
                                 <li><a href="#">Materials</a></li>
@@ -73,11 +73,11 @@
                     </ul><!-- //.gnb -->
                     <div class="right">
                         <div class="lang">
-                            <a href="#">EN</a>
-                            <a href="#">KR</a>
+                            <a href="#" class="en active">EN</a>
+                            <a href="#" class="kr ">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
-                            <a href="#"><img src="asset/user.png" alt="user"></a>
+                            <a href="#"><img src="back/img/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="ham">
                             <ul>
