--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -10,12 +10,12 @@
   <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/common_moon.css">
+  <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/main_media.css">
   <link rel="stylesheet" href="./moon/css/pg-style.css">
   <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
-  <script src="./js/common_moon.js"></script>
+  <script src="./js/common.js"></script>
   <script defer src="./moon/js/pg.js"></script>
   <title>Viewer’s Playground Page</title>
 </head>
