--- a/main_beck.html
+++ b/main_beck.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="/css/cursor.css">
     <link rel="stylesheet" href="./css/main_media.css">
     <link rel="stylesheet" href="back/css/MainBeck_style.css">
     <link rel="stylesheet" href="back/css/MainBack_media.css">
@@ -23,9 +24,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./back/js/MainBack.js"></script>
+    <script src="/js/cusor.js"></script>
 </head>
 
 <body>
+    <canvas id="cursorCanvas"></canvas>
     <div class="wrap">
         <div class="header_bg">
         </div>
