--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -33,12 +33,12 @@
   <div id="star-container"></div>
 
   <div class="wrap">
+    <div class="header_bg">
+    </div>
     <header class="">
-      <div class="header_bg">
-      </div>
       <div class="inner">
-        <h1><a href="#" class="logo"><img src="asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
-        <nav>
+        <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+        <nav class="">
           <ul class="gnb">
             <li class=""><a href="#">ABOUT</a>
               <ul class="sub">
@@ -79,12 +79,12 @@
             </li>
           </ul><!-- //.gnb -->
           <div class="right">
-            <div class="lang">
-              <a href="#">EN</a>
-              <a href="#">KR</a>
+            <div class="lang ">
+              <a href="#" class="en">EN</a>
+              <a href="#" class="kr">KR</a>
             </div><!-- //.lang -->
             <div class="user">
-              <a href="#"><img src="asset/user.png" alt="user"></a>
+              <a href="#"><img src="back/img/user.png" alt="user"></a>
             </div><!-- //.user -->
             <div class="ham">
               <ul>
@@ -104,7 +104,8 @@
 
     <section class="main_visual">
       <div class="zoom_container">
-        <h1 class="main_heading">Studio Dragon
+        <h1 class="main_heading">
+          <span class="move-right">Studio Dragon</span>
           <div class="eyes">
             <div class="eye eye-left"></div>
             <div class="eye eye-right"></div>
