--- a/main_beck.html
+++ b/main_beck.html
@@ -434,7 +434,7 @@
             </section>
 
 
-            <section class="LatestNews">
+            <section class="LatestNegit statusws">
                 <div class="inner">
                     <div class="top">
                         <h3>latest news</h3>
