--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
     <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="페이지 제목">
+    <meta property="og:description" content="페이지 설명">
+    <meta property="og:image" content="이미지 URL">
+    <meta property="og:url" content="페이지 URL">
     <title>studiodragon</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
