--- a/IR.html
+++ b/IR.html
@@ -21,75 +21,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="js/common_moon.js"></script>
-    <script src="IR_Kwon/js/main.js"></script>
+    <!-- <script src="IR_Kwon/js/main.js"></script> -->
 </head>
 
 <body>
     <div class="wrap">
-        <div class="header_bg">
-        </div>
-        <header class="">
-            <div class="inner">
-                <h1><a href="/main_beck.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
-                <nav class="">
-                    <ul class="gnb">
-                        <li class=""><a href="/companyintroduction_kim.html">ABOUT</a>
-                            <ul class="sub">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Business Ethics</a></li>
-                                <li><a href="#">Partnerships</a></li>
-                                <li><a href="#">History</a></li>
-                                <li><a href="#">CEO Message</a></li>
-                                <li><a href="#">Contact & Location</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/Listworks_lee.html">WORKS</a>
-                            <ul class="sub">
-                                <li><a href="#">Production List</a></li>
-                                <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">NEWSROOM</a>
-                            <ul class="sub">
-                                <li><a href="#">Notice</a></li>
-                                <li><a href="#">News</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/IR.html">IR</a>
-                            <ul class="sub">
-                                <li><a href="#">IR Insights</a></li>
-                                <li><a href="#">Materials</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">SUSTAINABILITY</a>
-                            <ul class="sub">
-                                <li><a href="#">Sustainability Story</a></li>
-                                <li><a href="#">Sustainability Activities</a></li>
-                                <li><a href="#">Sustainability Report</a></li>
-                                <li><a href="#">ESG Ratings</a></li>
-                                <li><a href="#">Sustainability Report</a></li>
-                            </ul>
-                        </li>
-                    </ul><!-- //.gnb -->
-                    <div class="right">
-                        <div class="lang">
-                            <a href="#" class="en active">EN</a>
-                            <a href="#" class="kr ">KR</a>
-                        </div><!-- //.lang -->
-                        <div class="user">
-                            <a href="#"><img src="back/img/user.png" alt="user"></a>
-                        </div><!-- //.user -->
-                        <div class="ham">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                        </div>
-                    </div><!-- //.right -->
-                </nav>
-            </div><!-- //.inner -->
-        </header>
+
         <main>  
           <section class="value_drivers">
     <div class="title">
@@ -356,7 +293,7 @@
             <div class="percent">56%</div>
             <div class="chart_container">
               <div class="chart">
-                <div class="fill"></div>
+                <!-- <div class="fill"></div> -->
               </div><!-- //. chart -->
             </div><!-- //. chart_container -->
             <div class="label">Broadcast</div>
@@ -367,7 +304,7 @@
             <div class="percent">64%</div>
             <div class="chart_container">
               <div class="chart">
-                <div class="fill"></div>
+                <!-- <div class="fill"></div> -->
               </div><!-- //. chart -->
             </div><!-- //. chart_container -->
             <div class="label">OTT</div>
@@ -378,7 +315,7 @@
             <div class="percent">60%</div>
             <div class="chart_container">
               <div class="chart">
-                <div class="fill"></div>
+                <!-- <div class="fill"></div> -->
               </div><!-- //. chart -->
             </div><!-- //. chart_container -->
             <div class="label">Overseas</div>
@@ -389,7 +326,7 @@
             <div class="percent">7%</div>
             <div class="chart_container">
               <div class="chart">
-                <div class="fill"></div>
+                <!-- <div class="fill"></div> -->
               </div><!-- //. chart -->
             </div><!-- //. chart_container -->
             <div class="label">Licensing</div>
@@ -400,7 +337,7 @@
             <div class="percent">6%</div>
             <div class="chart_container">
               <div class="chart">
-                <div class="fill"></div>
+                <!-- <div class="fill"></div> -->
               </div><!-- //. chart -->
             </div><!-- //. chart_container -->
             <div class="label">PPL</div>
@@ -506,7 +443,7 @@
             <div class="level level_med">MED</div>
           </div><!-- //. header -->
           <div class="meter">
-            <div class="fill fill_med"></div>
+            <!-- <div class="fill fill_med"></div> -->
           </div><!-- //. meter -->
           <div class="description">
             <p class="text"><strong>Mitigation:</strong> Add schedule buffer, parallelize post, pre-approve alt sets/locations</p>
@@ -521,7 +458,7 @@
             <div class="level level_high">HIGH</div>
           </div><!-- //. header -->
           <div class="meter">
-            <div class="fill fill_high"></div>
+            <!-- <div class="fill fill_high"></div> -->
           </div><!-- //. meter -->
           <div class="description">
             <p class="text"><strong>Mitigation:</strong> Hedge major currencies, diversify contract currency, shorten settlement cycle</p>
@@ -536,7 +473,7 @@
             <div class="level level_low">LOW</div>
           </div><!-- //. header -->
           <div class="meter">
-            <div class="fill fill_low"></div>
+            <!-- <div class="fill fill_low"></div> -->
           </div><!-- //. meter -->
           <div class="description">
             <p class="text"><strong>Mitigation:</strong> Pre-review checklist, sensitive-content guardrails, alternate cut plan</p>
