인덱스 링크 걸음

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
     <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="페이지 제목">
+    <meta property="og:title" content="Studio Dragon">
     <meta property="og:description" content="페이지 설명">
     <meta property="og:image" content="이미지 URL">
     <meta property="og:url" content="페이지 URL">
@@ -28,12 +28,12 @@
         </div>
         <header class="">
             <div class="inner">
-                <h1><a href="/main_beck.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="/index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="/companyintroduction_kim.html">ABOUT</a>
+                        <li class=""><a href="/intro_kim/intro.html">ABOUT</a>
                             <ul class="sub">
-                                <li><a href="#">About Us</a></li>
+                                <li><a href="/intro_kim/intro.html">About Us</a></li>
                                 <li><a href="#">Business Ethics</a></li>
                                 <li><a href="#">Partnerships</a></li>
                                 <li><a href="#">History</a></li>
@@ -71,7 +71,7 @@
                     </ul><!-- //.gnb -->
                     <div class="right">
                         <div class="lang">
-                            <a href="#" class="en ">EN</a>
+                            <a href="#" class="en active">EN</a>
                             <a href="#" class="kr ">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
@@ -99,7 +99,7 @@
                 <div class="footer_top">
                     <div class="footer_menu">
                         <div class="footer_gnb">
-                            <a href="#" class="footer_gnb_link home">Home</a>
+                            <a href="/index.html" class="footer_gnb_link home">Home</a>
                             <div class="footer_gnb_wrap">
                                 <ul class="footer_gnb_list">
                                     <li><a href="#" class="footer_gnb_link">Hotline</a></li>
