--- a/work_ryu.html
+++ b/work_ryu.html
@@ -71,7 +71,7 @@
                         </ul><!-- //.gnb -->
                         <div class="right">
                             <div class="lang">
-                                <a href="#" class="en">EN</a>
+                                <a href="#" class="en active">EN</a>
                                 <a href="#" class="kr">KR</a>
                             </div><!-- //.lang -->
                             <div class="user">
