--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
     <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>studiodragon</title>
+    <title>studiodragon1</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
@@ -24,7 +24,8 @@
         </div>
         <header class="">
             <div class="inner">
-                <h1><a href="/main_beck.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="/main_beck.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a>
+                </h1>
                 <nav class="">
                     <ul class="gnb">
                         <li class=""><a href="/companyintroduction_kim.html">ABOUT</a>
