yulssem 컨펌 수정 10.24.6.32

--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -15,6 +15,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <!-- GSAP Core -->
+  <script src="https://unpkg.com/@studio-freight/lenis@1.0.35/dist/lenis.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
   <!-- ScrollTrigger 플러그인 -->
@@ -22,8 +23,8 @@
 
   <!-- SplitText 플러그인 -->
   <!-- <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script> -->
-  <script src="js/common.js"></script>
-  <script src="./lee/js/filter.js" defer></script>
+  <script src="/js/common.js"></script>
+  <script src="/lee/js/filter.js" defer></script>
 
   <title>list of work</title>
 </head>
