--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -1107,7 +1107,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <img src="assets/image/dokkabi.jpg" alt=""></img><em>tvN's "Goblin"<br />Reaches
                                         20%
                                         Viewership Ratings</em>
