--- a/main_beck.html
+++ b/main_beck.html
@@ -24,7 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./back/js/MainBack.js"></script>
-    <script src="/js/cusor.js"></script>
+    <script src="/js/cursor.js"></script>
 </head>
 
 <body>
@@ -483,9 +483,9 @@
                         </div>
                         <!-- 네비게이션 인디케이터 -->
                         <div class="news-indicators">
-                            <div class="news-indicator active" data-index="0"></div>
-                            <div class="news-indicator" data-index="1"></div>
-                            <div class="news-indicator" data-index="2"></div>
+                            <div class="news-indicator active"></div>
+                            <div class="news-indicator"></div>
+                            <div class="news-indicator"></div>
                         </div>
                     </div>
                 </div>
