툐요일 디벨롭

--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -114,9 +114,9 @@
                     </div>
                 </div>
                 <div class="txt">
-                    <p class="head_copy first">Universal Emotions,</p>
-                    <p class="head_copy second">Original Stories</p>
-                    <em>We discover and create our own unique stories that<br /> the world can relate to and
+                    <p class="first_cach"><span>Universal</span> <span>Emotions,</sapn></p>
+                    <p class="second_cach"><span>Original Stories</span></p>
+                    <em>We discover and create our own unique stories that<br />the world can relate to and
                         enjoy as one.</em>
                 </div>
             </section>
@@ -134,13 +134,11 @@
                             </li>
 
                             <li class="box_b">
-                                <div>
                                     <img src="assets/icon_creator.png" alt="">
                                     <div class="txt_b">
                                         <p><span class="count" data-count-to="263">0</span></p>
                                         <em>Creators</em>
                                     </div>
-                                </div>
                             </li>
 
                             <li class="box_w">
@@ -956,7 +954,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <em>
                                         <My Mister> wins the Korean Writers' Award for Drama
                                     </em>
